test/error/parser/struct-static-after-field.dsk
struct S
    x: int
    let y = 1
end
